--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Hello World</string>
+    <string name="name">Lê Việt Linh</string>
+    <string name="age">25</string>
+    <string name="address">Hà Đông</string>
+    <string name="female">Female</string>
+    <string name="male">Male</string>
+    <string name="tel">Tel</string>
+    <string name="skills">Skills</string>
+    <string name="english">English</string>
+    <string name="japaneses">Japanese</string>
+    <string name="java">Jave</string>
+    <string name="android">Android</string>
+    <string name="hobbies">Hobbies</string>
+
 </resources>
